--- a/module2-solution/css/styles.css
+++ b/module2-solution/css/styles.css
@@ -17,9 +17,10 @@ header {
 .section1, .section2, .section3 {
 	background-color: #ABA2C1;
 	padding: 10px;	
-	margin-bottom: 1%;
-	margin-right: 1%;
+	margin-bottom: 15px;
+	margin-right: 15px;
 	position: relative;	
+	border: 1px solid black;
 	/** text overflow  **/	
 	overflow:hidden;	
 }
@@ -61,8 +62,7 @@ header {
 /********** Large devices only **********/
 @media (min-width: 992px) {
   .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
-    float: left;
-    border: 1px solid black;
+    float: left;    
   }
   .col-lg-1 {
     width: 8.33%;
@@ -74,7 +74,7 @@ header {
     width: 25%;
   }
   .col-lg-4 {
-    width: 31%;
+    width: 33.33%;
   }
   .col-lg-5 {
     width: 41.66%;
@@ -105,8 +105,7 @@ header {
 /********** Medium devices only **********/
 @media (min-width: 768px) and (max-width: 991px) {
   .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
-    float: left;
-    border: 1px solid black;
+    float: left;    
   }
   .col-md-1 {
     width: 8.33%;
@@ -124,7 +123,7 @@ header {
     width: 41.66%;
   }
   .col-md-6 {
-    width: 49%;
+    width: 50%;
   }
   .col-md-7 {
     width: 58.33%;
@@ -142,14 +141,13 @@ header {
     width: 91.66%;
   }
   .col-md-12 {
-    width: 99%;
+    width: 100%;
   }
 }
 /********** extra small devices only **********/
 @media (max-width: 767px) {
   .col-xs-1, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9, .col-xs-10, .col-xs-11, .col-xs-12 {
-    float: left;
-    border: 1px solid black;
+    float: left;    
   }
   .col-xs-1 {
     width: 8.33%;
